css/styles.css
@charset "UTF-8";
/*!
* Start Bootstrap - Bare v5.0.4 (https://startbootstrap.com/template/bare)
* Copyright 2013-2021 Start Bootstrap
* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-bare/blob/master/LICENSE)
*/
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
/* ================ GLOBAL ================= */
.fullwidth {
  width: 100%;
  margin: 0;
}

body, html {
  overflow-x: hidden;
  font-family: "Lato", sans-serif;
}

h2 {
  font-size: 34px;
  text-transform: uppercase;
  letter-spacing: 2px;
}

/* ================ NAVIGATION ================ */
.scrolled {
  background-color: #fff !important;
  box-shadow: 0px 4px 13px -5px rgba(0, 0, 0, 0.49);
}

.scrolled-a {
  color: rgba(0, 0, 0, 0.3) !important;
}

.scrolled-a:hover {
  color: black !important;
}

.scrolled-b {
  color: #000 !important;
}

nav.navbar {
  position: fixed;
  width: 100%;
  z-index: 99;
  background: transparent;
  font-weight: 400;
  color: rgba(255, 255, 255, 0.6);
  justify-content: space-between;
  transition: ease all 2000ms;
}

.navbar-toggler, .navbar-toggler:focus {
  outline: none;
  border: none;
  color: transparent;
}

nav.navbar .nav-link {
  text-decoration: none !important;
  color: rgba(255, 255, 255, 0.6);
  text-transform: uppercase;
  margin-right: 3%;
  width: 100%;
  font-weight: 400;
  transition: ease all 500ms;
}

.navbar-brand {
  transition: ease all 500ms;
}

.navbar-brand:hover {
  transition: ease all 500ms;
  text-transform: none !important;
}

nav.navbar .nav-item a:hover {
  text-decoration: none !important;
  color: #fff;
  text-transform: uppercase;
  margin-right: 3%;
  width: 100%;
  font-weight: 400;
  flex-basis: 100%;
}

/* ================ HERO SECTION ================ */
.hero {
  position: relative;
  width: 100%;
}

.hero-gallery img {
  height: 90vh;
  width: 100%;
  position: relative;
}

.hero-gallery iframe {
  height: 90vh;
  width: 100%;
  position: relative;
}

.hero-info {
  bottom: 0;
  position: absolute;
  z-index: 2;
  width: 100%;
  padding-top: 1em;
  padding-bottom: 1em;
  color: #fff;
  display: flex;
  align-items: center;
  border-top: 1px solid #fff;
}

.hero-info .listing-address p {
  margin: 0;
  text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
}

.hero-info .listing-price {
  text-align: right;
  font-size: 60px;
  font-weight: 300;
  text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
}
.hero-info .listing-price p {
  margin-bottom: 0 !important;
}

.listing-address .street {
  font-size: 30px;
  font-weight: 600;
}

.listing-address .city {
  font-size: 20px;
  font-weight: 400;
  letter-spacing: 4px;
}

@media screen and (max-width: 600px) {
  .listing-address .street {
    font-size: 20px;
    font-weight: 600;
  }

  .listing-address .city {
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 2px;
  }

  .hero-info .listing-price {
    font-size: 30px;
  }
}
@media screen and (max-width: 361px) {
  .listing-address .street {
    font-size: 18px;
    font-weight: 600;
  }

  .listing-address .city {
    font-size: 12px;
    font-weight: 400;
    letter-spacing: 1px;
  }

  .hero-info .listing-price {
    font-size: 25px;
  }
}
/* SLICK SLIDER */
.slider {
  height: 100vh;
  width: 100vw;
  margin: 0;
  overflow: hidden;
}

.slick-slide {
  margin: 0;
  height: 100vh;
  width: 100vw;
}

.slick-slide img {
  width: 100vw;
  height: 100vh;
  background-position: center;
  -o-object-fit: cover;
     object-fit: cover;
}

.slick-prev:before,
.slick-next:before {
  color: black;
}

.slick-slide {
  transition: all ease-in-out 0.3s;
  opacity: 0.2;
}

.slick-active {
  opacity: 0.5;
}

.slick-current {
  opacity: 1;
}

@media screen and (max-width: 600px) {
  .slider {
    height: 70vh;
    width: 100vw;
    margin: 0;
    overflow: hidden;
  }

  .slick-slide {
    margin: 0;
    height: 70vh;
    width: 100vw;
  }

  .slick-slide img {
    width: 100vw;
    height: 70vh;
    background-position: center;
    -o-object-fit: cover;
       object-fit: cover;
  }

  .amenities p {
    font-size: 14px;
  }
}
/* ================ PROPERTY DETAILS ================ */
.property-details {
  width: 100%;
  text-align: center;
  background-image: repeating-linear-gradient(-45deg, #f4f4f4, #f4f4f4 2px, transparent 0, transparent 50%);
  background-size: 12px 12px;
}

.property-details .lg-num {
  font-size: 50px;
  font-weight: 500;
  color: gray;
  margin: 0;
}

.property-details .title {
  color: gray;
  margin-bottom: 0;
}

.property-overview {
  font-size: 25px;
  font-weight: 300;
}

.property-overview .row {
  position: relative;
}

.property-description-mobile {
  display: none;
}
.property-description-mobile .featured {
  height: 250px;
}
.property-description-mobile .description {
  margin-bottom: 2em;
}

@media screen and (max-width: 768px) {
  .row.fullwidth.property-details {
    padding: 1em 0 !important;
  }

  .property-details .lg-num {
    font-size: 20px;
  }

  .property-details .title {
    font-size: 10px;
  }

  .agent-photo {
    margin-bottom: 2em;
    height: auto !important;
  }

  .contact-form, .agent-info {
    margin-top: 2em;
  }

  .agent-info p:last-of-type {
    margin-top: 1em !important;
  }

  .agent-info h6 {
    margin-bottom: 1em !important;
  }

  .property-description {
    display: none;
  }

  .property-description-mobile {
    display: block;
  }
}
.property-description p {
  min-height: 300px;
  height: 300px;
}

/* ============= Property Description ============= */
.text-background {
  background: #fff;
}

.item {
  position: relative;
}

.featured {
  position: relative;
}

.featured .hover-text {
  color: #fff;
  z-index: 5;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-transform: uppercase;
  font-size: 10px;
  text-align: center;
  opacity: 0;
  transition: ease all 500ms;
  cursor: pointer;
}
/* ... */

